--- a/program.htm
+++ b/program.htm
@@ -2478,6 +2478,10 @@ LeetCode</h3>
     <a href="program/leetcode_c_2.htm">
     2. Add Two Numbers</a><br>
 
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/leetcode_c_3.htm">
+    3. Longest Substring Without Repeating Characters</a><br>
+
 &oplus;
 <b>C++</b><br>
 
@@ -2489,6 +2493,10 @@ LeetCode</h3>
     <a href="program/leetcode_cpp_2.htm">
     2. Add Two Numbers</a><br>
 
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/leetcode_cpp_3.htm">
+    3. Longest Substring Without Repeating Characters</a><br>
+
 &oplus;
 <b>Rust</b><br>
 
@@ -2499,6 +2507,11 @@ LeetCode</h3>
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="program/leetcode_rust_2.htm">
     2. Add Two Numbers</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/leetcode_rust_3.htm">
+    3. Longest Substring Without Repeating Characters</a><br>
+
 <br><br><br><br>
 </p>
 
