--- a/program/leetcode_c_1.htm
+++ b/program/leetcode_c_1.htm
@@ -11,7 +11,8 @@
 解答：
 </p>
 <pre class="brush:cpp">
-int* twoSum(int *nums, int numsSize, int target, int *returnSize) {
+int* twoSum(int *nums, int numsSize, int target, int *returnSize)
+{
     int c0 = 0;
     int c1 = 0;
 
