--- a/program/leetcode_c_2.htm
+++ b/program/leetcode_c_2.htm
@@ -14,7 +14,8 @@ https://www.cnblogs.com/grandyang/p/4129891.html<br><br>
 解答：
 </p>
 <pre class="brush:cpp">
-struct ListNode* addTwoNumbers(struct ListNode *l1, struct ListNode *l2) {
+struct ListNode* addTwoNumbers(struct ListNode *l1, struct ListNode *l2)
+{
     int carry = 0;
     struct ListNode *r = malloc(sizeof(struct ListNode));
     struct ListNode *cur = r;
