GNU Added an exmaple for UDP socket.

--- a/program/gnu_cpp_tcp_hello.htm
+++ b/program/gnu_cpp_tcp_hello.htm
@@ -49,7 +49,7 @@ int main(int argc, char const* argv[])
 
     addr.sin_family = AF_INET;
     addr.sin_addr.s_addr = inet_addr(argv[1]); // INADDR_ANY;
-    addr.sin_port = htons(atol(argv[2])); 
+    addr.sin_port = htons(atoi(argv[2])); 
     if (bind(fd, (struct sockaddr *)&amp;addr, sizeof(addr)) &lt; 0) {
         perror("bind");
         return -1;
@@ -107,7 +107,7 @@ int main(int argc, char const* argv[])
     }
 
     addr.sin_family = AF_INET;
-    addr.sin_port = htons(atol(argv[2])); 
+    addr.sin_port = htons(atoi(argv[2])); 
     if (inet_pton(AF_INET, argv[1], &amp;addr.sin_addr) &lt;= 0) {
         perror("inet_pton");
         return -1;
