--- a/program/gnu_cpp_tcp_hello.htm
+++ b/program/gnu_cpp_tcp_hello.htm
@@ -90,7 +90,6 @@ int main(int argc, char const* argv[])
 {
     int r = 0;
     int fd = -1;
-    int status = 0;
     struct sockaddr_in addr = {0};
     const char *hello = "hello from client !";
     char buf[1024] = {0};
@@ -113,8 +112,7 @@ int main(int argc, char const* argv[])
         return -1;
     }
 
-    status = connect(fd, (struct sockaddr *)&amp;addr, sizeof(addr));
-    if (status &lt; 0) {
+    if (connect(fd, (struct sockaddr *)&amp;addr, sizeof(addr)) &lt; 0) {
         perror("connect");
         return -1;
     }
