--- a/program/gnu_cpp_udp_hello.htm
+++ b/program/gnu_cpp_udp_hello.htm
@@ -21,12 +21,12 @@ server.c
 #include &lt;netinet/in.h&gt; 
 
 int main(int argc, char **argv) 
-{    
+{
+    int r = 0;
     int fd = 0;
-    int len;
-    struct sockaddr_in cliaddr = {0};
-    struct sockaddr_in servaddr = {0};
+    int len = 0;
     char buf[1024] = {0};
+    struct sockaddr_in servaddr = {0};
     const char *hello = "hello from server !";
 
     if (argc != 3) {
@@ -35,7 +35,7 @@ int main(int argc, char **argv)
     }
 
     fd = socket(AF_INET, SOCK_DGRAM, 0);
-    servaddr.sin_addr.s_addr = inet_addr(argv[1]); // INADDR_ANY;
+    servaddr.sin_addr.s_addr = inet_addr(argv[1]); // INADDR_ANY
     servaddr.sin_port = htons(atoi(argv[2]));
     servaddr.sin_family = AF_INET;
 
@@ -44,13 +44,14 @@ int main(int argc, char **argv)
         return -1;
     }
 
-    len = sizeof(cliaddr);
-    int r = recvfrom(fd, buf, sizeof(buf), 0, (struct sockaddr*)&amp;cliaddr, &amp;len);
+    len = sizeof(struct sockaddr_in);
+    r = recvfrom(fd, buf, sizeof(buf), 0, (struct sockaddr*)&amp;servaddr, &amp;len);
     printf("%s\n", buf);
-    sendto(fd, hello, strlen(hello), 0, (struct sockaddr*)&amp;cliaddr, sizeof(cliaddr)); 
+
+    sendto(fd, hello, strlen(hello), 0, (struct sockaddr*)&amp;servaddr, sizeof(servaddr));
     close(fd);
     return 0;
-} 
+}
 </pre><br>
 
 <p>
@@ -70,6 +71,7 @@ int main(int argc, char **argv)
 {    
     int r = 0; 
     int fd = -1;
+    int len = 0;
     char buf[1024] = {0};
     struct sockaddr_in servaddr = {0}; 
     const char *hello = "hello from client !";
@@ -84,13 +86,10 @@ int main(int argc, char **argv)
     servaddr.sin_family = AF_INET;
 
     fd = socket(AF_INET, SOCK_DGRAM, 0); 
-    if (connect(fd, (struct sockaddr *)&amp;servaddr, sizeof(servaddr)) &lt; 0) { 
-        perror("connect"); 
-        return -1;
-    }
+    sendto(fd, hello, strlen(hello), 0, (struct sockaddr*)&amp;servaddr, sizeof(servaddr));
 
-    sendto(fd, hello, strlen(hello), 0, (struct sockaddr*)NULL, sizeof(servaddr));
-    recvfrom(fd, buf, sizeof(buf), 0, (struct sockaddr*)NULL, NULL);
+    len = sizeof(struct sockaddr_in);
+    recvfrom(fd, buf, sizeof(buf), 0, (struct sockaddr*)&amp;servaddr, (socklen_t *)&amp;len);
     printf("%s\n", buf);
     close(fd);
     return 0;
