--- a/system/vxworks_23_09_setup_qemu.htm
+++ b/system/vxworks_23_09_setup_qemu.htm
@@ -26,7 +26,7 @@ $ qemu-system-x86_64 -m 512M -kernel vxsdk/bsps/itl_generic_3_0_0_3/vxWorks \
 如果要存取Host檔案，在另一個Terminal視窗下，執行如下指令
 </p>
 <pre>
-$ sudo python3 -m pyftpdlib -p 21 -u target -P vxTarget -i 127.0.0.1 -d $HOME
+$ sudo python3 -m pyftpdlib -p 21 -u target -P vxTarget -i 127.0.0.1 -d $HOME -w
 </pre><br>
 
 <p>
