--- a/system/vxworks_23_09_setup_qemu.htm
+++ b/system/vxworks_23_09_setup_qemu.htm
@@ -34,7 +34,7 @@ QEMU裏面存取Host檔案
 </p>
 <pre>
 -&gt; cmd
-[vxWorks *]# ls /host.host
+[vxWorks *]# ls
 </pre>
 
 <br><script type="text/javascript" src="../tail.js"></script>
