--- a/index.htm
+++ b/index.htm
@@ -813,8 +813,8 @@ TRIMUI</h3>
 <a href="handheld/trimui_overclock.htm">
 CPU超頻</a><br>
 
-&lowast;
-<a href="handheld/trimui/mod.htm">
+&dash;
+<a href="handheld/trimui_mod.htm">
 終極改造</a><br>
 
 &lowast;
