--- a/index.htm
+++ b/index.htm
@@ -817,12 +817,12 @@ CPU超頻</a><br>
 <a href="handheld/trimui_mod.htm">
 終極改造</a><br>
 
-&lowast;
-<a href="handheld/trimui/keypad.htm">
+&dash;
+<a href="handheld/trimui_keypad.htm">
 更換按鍵</a><br>
 
-&lowast;
-<a href="handheld/trimui/battery.htm">
+&dash;
+<a href="handheld/trimui_battery.htm">
 更換電池</a><br>
 
 &lowast;
