--- a/index.htm
+++ b/index.htm
@@ -825,8 +825,8 @@ CPU超頻</a><br>
 <a href="handheld/trimui_battery.htm">
 更換電池</a><br>
 
-&lowast;
-<a href="handheld/trimui/l2r2_mod.htm">
+&dash;
+<a href="handheld/trimui_l2r2.htm">
 L2R2改造</a><br>
 
 &lowast;
