--- a/index.htm
+++ b/index.htm
@@ -829,8 +829,8 @@ CPU超頻</a><br>
 <a href="handheld/trimui_l2r2.htm">
 L2R2改造</a><br>
 
-&lowast;
-<a href="handheld/trimui/sdlkey.htm">
+&dash;
+<a href="handheld/trimui_sdlkey.htm">
 SDL Key</a><br>
 
 &lowast;
