Miyoo Mini Plus How to build linux-perf.

--- a/index.htm
+++ b/index.htm
@@ -1926,6 +1926,10 @@ Repack uImage.xz</a><br>
 解決fatal error: tbl.hh: No such file or directory問題</a><br>
 
 &dash;
+<a href="handheld/miyoo_mini_plus_build_perf.htm">
+Build Perf</a><br>
+
+&dash;
 <a href="handheld/miyoo_mini_plus_build_kernel.htm">
 Build Kernel</a><br>
 
