Miyoo Mini Plus Refined.

--- a/handheld/miyoo_mini_plus_build_perf.htm
+++ b/handheld/miyoo_mini_plus_build_perf.htm
@@ -22,6 +22,7 @@ $ wget https://github.com/steward-fu/website/releases/download/miyoo-mini-plus/s
 $ tar xvf src_kernel-4.9.84.tar.gz
 $ cd kernel
 $ ARCH=arm CROSS_COMPILE=arm-linux-gnueabihf- make mmp_defconfig
+$ ARCH=arm CROSS_COMPILE=arm-linux-gnueabihf- make EXTRA_CFLAGS=-w clean
 $ ARCH=arm CROSS_COMPILE=arm-linux-gnueabihf- make EXTRA_CFLAGS=-w -C tools/perf
 </pre><br>
 
