--- a/index.htm
+++ b/index.htm
@@ -1914,6 +1914,10 @@ Repack uImage.xz</a><br>
 如何更新U-Boot Environment CRC32</a><br>
 
 &dash;
+<a href="handheld/miyoo_mini_plus_fix_perf.htm">
+分析Perf Segmentation fault問題</a><br>
+
+&dash;
 <a href="handheld/miyoo_mini_plus_fix_lcd_pixel_clock.htm">
 解決LCD Pixel Clock問題</a><br>
 
