Miyoo Mini Plus How to find out the performance bottleneck in app.

--- a/index.htm
+++ b/index.htm
@@ -1914,6 +1914,10 @@ Repack uImage.xz</a><br>
 如何更新U-Boot Environment CRC32</a><br>
 
 &dash;
+<a href="handheld/miyoo_mini_plus_perf.htm">
+如何使用Perf找出User Application的效能瓶頸副程式</a><br>
+
+&dash;
 <a href="handheld/miyoo_mini_plus_fix_perf.htm">
 分析Perf Segmentation fault問題</a><br>
 
