Miyoo A30 Added review and screen pages.

--- a/index.htm
+++ b/index.htm
@@ -26,6 +26,7 @@
     <a href="#wiz">             <img src="img/photos/wiz.jpg"               class="t0" title="GP2X Wiz"/></a>
     <a href="#trimui">          <img src="img/photos/trimui.jpg"            class="t0" title="TRIMUI"/></a>
     <a href="#trimui-smart">    <img src="img/photos/trimui-smart.jpg"      class="t0" title="TRIMUI SMART"/></a>
+    <a href="#miyoo-a30">       <img src="img/photos/miyoo-a30.jpg"         class="t0" title="Miyoo A30"/></a>
     <a href="#pocketgo">        <img src="img/photos/pocketgo.jpg"          class="t0" title="PocketGo"/></a>
     <a href="#gkd-pixel">       <img src="img/photos/gkd-pixel.jpg"         class="t0" title="GKD Pixel"/></a>
     <a href="#miyoomini">       <img src="img/photos/miyoo-mini.jpg"        class="t0" title="Miyoo Mini"/></a>
@@ -1219,6 +1220,20 @@ dump kernel from memory</a><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="handheld/trimui-smart/cpp_screenscale.htm">
     Screen Scaling</a><br>
+<br><br><br><br>
+
+<div id="miyoo-a30"></div>
+<h3><img src="img/photos/miyoo-a30.jpg" class="floatLeft"/>
+Miyoo A30</h3>
+<hr size="1"><br><br><br><br><br>
+
+&dash;
+<a href="handheld/miyoo_a30_spec.htm">
+介紹</a><br>
+
+&dash;
+<a href="handheld/miyoo_a30_screen.htm">
+可視角</a><br>
 <br><br><br><br>
 
 <div id="pocketgo"></div>
