Miyoo A30 Added teardown images.

--- a/index.htm
+++ b/index.htm
@@ -1232,6 +1232,10 @@ Miyoo A30</h3>
 介紹</a><br>
 
 &dash;
+<a href="handheld/miyoo_a30_teardown.htm">
+拆機</a><br>
+
+&dash;
 <a href="handheld/miyoo_a30_screen.htm">
 可視角</a><br>
 <br><br><br><br>
