Miyoo A30 How to solder UART.

--- a/index.htm
+++ b/index.htm
@@ -1238,6 +1238,10 @@ Miyoo A30</h3>
 &dash;
 <a href="handheld/miyoo_a30_screen.htm">
 可視角</a><br>
+
+&dash;
+<a href="handheld/miyoo_a30_uart.htm">
+焊接UART</a><br>
 <br><br><br><br>
 
 <div id="pocketgo"></div>
