Miyoo A30 Added block diagram and memory map.

--- a/index.htm
+++ b/index.htm
@@ -1242,6 +1242,14 @@ Miyoo A30</h3>
 &dash;
 <a href="handheld/miyoo_a30_uart.htm">
 焊接UART</a><br>
+
+&dash;
+<a href="handheld/miyoo_a30_memory_map.htm">
+Memory Map</a><br>
+
+&dash;
+<a href="handheld/miyoo_a30_boot_diagram.htm">
+Boot Diagram</a><br>
 <br><br><br><br>
 
 <div id="pocketgo"></div>
