AutoSD How to prepare AutoSD system.

--- a/system.htm
+++ b/system.htm
@@ -29,6 +29,7 @@
     <a href="#sailfish">    <img src="img/photos/sailfish.jpg"      class="t0" title="Sailfish OS"/></a>
     <a href="#autosar">     <img src="img/photos/autosar.jpg"       class="t0" title="AUTOSAR"/></a>
     <a href="#vxworks">     <img src="img/photos/vxworks.jpg"       class="t0" title="VxWorks"/></a>
+    <a href="#autosd">      <img src="img/photos/autosd.jpg"        class="t0" title="Automotive Stream Distribution (AutoSD)"/></a>
 </p>
 </div>
 
@@ -593,7 +594,16 @@ VxWorks</h3>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="system/vxworks_23_09_build_dkm.htm">
     Build Example(DKM)</a><br>
+<br><br><br><br>
 
+<div id="autosd"></div>
+<h3><img src="img/photos/autosd.jpg" class="floatLeft"/>
+Automotive Stream Distribution (AutoSD)</h3>
+<hr size="1"><br><br><br><br><br>
+
+&dash;
+<a href="system/autosd_setup_qemu_aarch64.htm">
+安裝系統(QEMU aarch64)</a><br>
 <br><br><br><br>
 </p>
 
