--- a/system/autosd_setup_qemu_aarch64.htm
+++ b/system/autosd_setup_qemu_aarch64.htm
@@ -39,7 +39,7 @@ Memory=1024, CPU=1<br>
 Firmware要記得選<br>
 <img src="autosd_setup_qemu_aarch64/5.jpg" class="maxSize"><br><br>
 
-選擇Begin Installation後，就會開始啟動AutoSD系統，預設密碼是：root:password<br>
+選擇Begin Installation後，就會開始啟動AutoSD系統，預設密碼(root:password)<br>
 <img src="autosd_setup_qemu_aarch64/6.jpg" class="maxSize">
 </p>
 
