Miyoo A30 Added an example for screen testing.

--- a/index.htm
+++ b/index.htm
@@ -1250,6 +1250,13 @@ Memory Map</a><br>
 &dash;
 <a href="handheld/miyoo_a30_boot_diagram.htm">
 Boot Diagram</a><br>
+
+&oplus;
+<b>C/C++</b><br>
+    
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/miyoo_a30_cpp_screentest.htm">
+    閃屏測試</a><br>
 <br><br><br><br>
 
 <div id="pocketgo"></div>
