--- a/system.htm
+++ b/system.htm
@@ -30,6 +30,7 @@
     <a href="#autosar">     <img src="img/photos/autosar.jpg"       class="t0" title="AUTOSAR"/></a>
     <a href="#vxworks">     <img src="img/photos/vxworks.jpg"       class="t0" title="VxWorks"/></a>
     <a href="#autosd">      <img src="img/photos/autosd.jpg"        class="t0" title="Automotive Stream Distribution (AutoSD)"/></a>
+    <a href="#yocto">       <img src="img/photos/yocto.jpg"         class="t0" title="The Yocto Project"/></a>
 </p>
 </div>
 
@@ -604,6 +605,16 @@ Automotive Stream Distribution (AutoSD)</h3>
 &dash;
 <a href="system/autosd_setup_qemu_aarch64.htm">
 安裝系統(QEMU aarch64)</a><br>
+<br><br><br><br>
+
+<div id="yocto"></div>
+<h3><img src="img/photos/yocto.jpg" class="floatLeft"/>
+The Yocto Project</h3>
+<hr size="1"><br><br><br><br><br>
+
+&dash;
+<a href="system/yocto_fix_docker_bridge.htm">
+解決Docker Error creating default "bridge" network問題</a><br>
 <br><br><br><br>
 </p>
 
