--- a/system.htm
+++ b/system.htm
@@ -613,6 +613,10 @@ The Yocto Project</h3>
 <hr size="1"><br><br><br><br><br>
 
 &dash;
+<a href="system/yocto_kernel_config.htm">
+如何修改Kernel Config</a><br>
+
+&dash;
 <a href="system/yocto_fix_docker_bridge.htm">
 解決Docker Error creating default "bridge" network問題</a><br>
 <br><br><br><br>
