--- a/system/yocto_kernel_config.htm
+++ b/system/yocto_kernel_config.htm
@@ -4,6 +4,19 @@
 
 <h3><a href="../system.htm">系統</a> - The Yocto Project - <b>如何修改Kernel Config</b></h3>
 <hr size="1"><br>
+<p>
+參考資訊：<br>
+https://www.konsulko.com/using-kernel-config-fragments-to-remove-an-unwanted-feature<br><br>
+
+distclean
+</p>
+<pre>
+$ bitbake -c kernel_configme -f linux-yocto
+</pre><br>
+
+<p>
+menuconfig
+</p>
 <pre>
 $ bitbake linux-yocto -c do_menuconfig
 </pre>
