Q19 Added teardown and screen images.

--- a/system/yocto_kernel_config.htm
+++ b/system/yocto_kernel_config.htm
@@ -8,7 +8,7 @@
 參考資訊：<br>
 https://www.konsulko.com/using-kernel-config-fragments-to-remove-an-unwanted-feature<br><br>
 
-distclean
+clean
 </p>
 <pre>
 $ bitbake -c kernel_configme -f linux-yocto
