Miyoo A30 Fixed libstd++-fs issue.

--- a/index.htm
+++ b/index.htm
@@ -1252,6 +1252,10 @@ Memory Map</a><br>
 <a href="handheld/miyoo_a30_boot_diagram.htm">
 Boot Diagram</a><br>
 
+&dash;
+<a href="handheld/miyoo_a30_fix_libstd.htm">
+解決Undefined reference to std::filesystem問題</a><br>
+
 &oplus;
 <b>C/C++</b><br>
     
