--- a/index.htm
+++ b/index.htm
@@ -1253,6 +1253,10 @@ Memory Map</a><br>
 Boot Diagram</a><br>
 
 &dash;
+<a href="handheld/miyoo_a30_fix_libreadline.htm">
+解決Symbol __libc_readline_unlocked問題</a><br>
+
+&dash;
 <a href="handheld/miyoo_a30_fix_libstd.htm">
 解決Undefined reference to std::filesystem問題</a><br>
 
