Miyoo A30 Fixed SDL2 assertion issue.

--- a/index.htm
+++ b/index.htm
@@ -1260,6 +1260,10 @@ Boot Diagram</a><br>
 <a href="handheld/miyoo_a30_fix_libstd.htm">
 解決Undefined reference to std::filesystem問題</a><br>
 
+&dash;
+<a href="handheld/miyoo_a30_fix_sdl2_assert.htm">
+解決SDL2 Abort/Break/Retry/Ignore/AlwaysIgnore問題</a><br>
+
 &oplus;
 <b>C/C++</b><br>
     
