Miyoo A30 Fixed string_view issue in gcc 6.x.

--- a/index.htm
+++ b/index.htm
@@ -1261,8 +1261,16 @@ Boot Diagram</a><br>
 解決Undefined reference to std::filesystem問題</a><br>
 
 &dash;
+<a href="handheld/miyoo_a30_fix_string_view1.htm">
+解決Error: string_view is not a member of std問題</a><br>
+
+&dash;
 <a href="handheld/miyoo_a30_fix_sdl2_assert.htm">
 解決SDL2 Abort/Break/Retry/Ignore/AlwaysIgnore問題</a><br>
+
+&dash;
+<a href="handheld/miyoo_a30_fix_string_view2.htm">
+解決Fatal error: string_view: No such file or directory問題</a><br>
 
 &oplus;
 <b>C/C++</b><br>
