Miyoo A30 How to build glibc-2.23.

--- a/index.htm
+++ b/index.htm
@@ -1253,6 +1253,10 @@ Memory Map</a><br>
 Boot Diagram</a><br>
 
 &dash;
+<a href="handheld/miyoo_a30_buildroot_glibc_2.23.htm">
+如何讓Buildroot編譯GLIBC 2.23</a><br>
+
+&dash;
 <a href="handheld/miyoo_a30_fix_libreadline.htm">
 解決Symbol __libc_readline_unlocked問題</a><br>
 
