Miyoo A30 Fixed opengles precision issue.

--- a/index.htm
+++ b/index.htm
@@ -1276,6 +1276,10 @@ Boot Diagram</a><br>
 <a href="handheld/miyoo_a30_fix_string_view2.htm">
 解決Fatal error: string_view: No such file or directory問題</a><br>
 
+&dash;
+<a href="handheld/miyoo_a30_fix_highp.htm">
+解決Cannot link shader program object: L0010 Uniform love_UniformsPerDraw2 differ on precision問題</a><br>
+
 &oplus;
 <b>C/C++</b><br>
     
