--- a/index.htm
+++ b/index.htm
@@ -1265,6 +1265,10 @@ Boot Diagram</a><br>
 解決Undefined reference to std::filesystem問題</a><br>
 
 &dash;
+<a href="handheld/miyoo_a30_fix_sdl_sensor.htm">
+解決Could not initialize SDL sensor subsystem問題</a><br>
+
+&dash;
 <a href="handheld/miyoo_a30_fix_string_view1.htm">
 解決Error: string_view is not a member of std問題</a><br>
 
