Miyoo A30 Fixed QT6 issue.

--- a/index.htm
+++ b/index.htm
@@ -1281,6 +1281,10 @@ Boot Diagram</a><br>
 解決Fatal error: string_view: No such file or directory問題</a><br>
 
 &dash;
+<a href="handheld/miyoo_a30_fix_qt6.htm">
+解決QT6 qpa/qplatformnativeinterface.h No such file or directory問題</a><br>
+
+&dash;
 <a href="handheld/miyoo_a30_fix_highp.htm">
 解決Cannot link shader program object: L0010 Uniform love_UniformsPerDraw2 differ on precision問題</a><br>
 
