--- a/index.htm
+++ b/index.htm
@@ -1257,6 +1257,10 @@ Boot Diagram</a><br>
 如何讓Buildroot編譯GLIBC 2.23</a><br>
 
 &dash;
+<a href="handheld/miyoo_a30_fix_join.htm">
+解決join is not a member of fmt問題</a><br>
+
+&dash;
 <a href="handheld/miyoo_a30_fix_libreadline.htm">
 解決Symbol __libc_readline_unlocked問題</a><br>
 
