--- a/index.htm
+++ b/index.htm
@@ -1292,6 +1292,10 @@ Boot Diagram</a><br>
 <a href="handheld/miyoo_a30_fix_highp.htm">
 解決Cannot link shader program object: L0010 Uniform love_UniformsPerDraw2 differ on precision問題</a><br>
 
+&dash;
+<a href="handheld/miyoo_a30_build_sdl2.htm">
+Build SDL2</a><br>
+
 &oplus;
 <b>C/C++</b><br>
     
