Miyoo A30 Fixed libc issue.

--- a/index.htm
+++ b/index.htm
@@ -1281,6 +1281,10 @@ Boot Diagram</a><br>
 解決SDL2 Abort/Break/Retry/Ignore/AlwaysIgnore問題</a><br>
 
 &dash;
+<a href="handheld/miyoo_a30_fix_libc.htm">
+解決Error asm/errno.h No such file or directory問題</a><br>
+
+&dash;
 <a href="handheld/miyoo_a30_fix_string_view2.htm">
 解決Fatal error: string_view: No such file or directory問題</a><br>
 
