SDL Added joystick example.

--- a/program.htm
+++ b/program.htm
@@ -1730,6 +1730,10 @@ SDL</h3>
             Mouse Event</a><br>
 
             &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+            <a href="program/sdl/v2.0/cpp_joystick.htm">
+            Joystick Event</a><br>
+
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
             <a href="program/sdl/v2.0/cpp_font.htm">
             Open Font</a><br>
 
