--- a/index.htm
+++ b/index.htm
@@ -1306,6 +1306,10 @@ Build SDL2</a><br>
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="handheld/miyoo_a30_cpp_screentest.htm">
     閃屏測試</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/miyoo_a30_cpp_joystick.htm">
+    Joystick</a><br>
 <br><br><br><br>
 
 <div id="pocketgo"></div>
