--- a/index.htm
+++ b/index.htm
@@ -1253,6 +1253,14 @@ Memory Map</a><br>
 Boot Diagram</a><br>
 
 &dash;
+<a href="handheld/miyoo_a30_led.htm">
+如何控制藍色LED</a><br>
+
+&dash;
+<a href="handheld/miyoo_a30_backlight.htm">
+如何控制屏幕背光</a><br>
+
+&dash;
 <a href="handheld/miyoo_a30_buildroot_glibc_2.23.htm">
 如何讓Buildroot編譯GLIBC 2.23</a><br>
 
