GNU How to use bash array.

--- a/program.htm
+++ b/program.htm
@@ -285,6 +285,10 @@ invoke</a><br>
 struct</a><br>
 
 &lowast;
+<a href="program/gnu_bash_array.htm">
+BASH Array</a><br>
+
+&lowast;
 <a href="program/gnu/restore_pid.htm">
 restore pid</a><br>
 
