K3s How to setup environment.

--- a/system.htm
+++ b/system.htm
@@ -537,6 +537,10 @@ K3s</h3>
 <hr size="1"><br><br><br><br><br>
 
 &lowast;
+<a href="system/k3s_setup.htm">
+安裝環境</a><br>
+
+&lowast;
 <a href="system/k3s/cli.htm">
 常見操作指令</a><br>
 
