K3s How to import docker image.

--- a/system.htm
+++ b/system.htm
@@ -536,17 +536,21 @@ K8s</h3>
 K3s</h3>
 <hr size="1"><br><br><br><br><br>
 
-&lowast;
+&dash;
 <a href="system/k3s_setup.htm">
 安裝環境</a><br>
 
-&lowast;
-<a href="system/k3s/cli.htm">
-常見操作指令</a><br>
+&dash;
+<a href="system/k3s_pod.htm">
+建立、刪除Pod</a><br>
 
-&lowast;
-<a href="system/k3s/audit.htm">
-enable audit event</a><br>
+&dash;
+<a href="system/k3s_audit.htm">
+Enable Audit Event</a><br>
+
+&dash;
+<a href="system/k3s_import_docker_image.htm">
+Import Docker Image</a><br>
 <br><br><br><br>
 
 <div id="sailfish"></div>
