--- a/system/k3s_setup.htm
+++ b/system/k3s_setup.htm
@@ -6,9 +6,10 @@
 <hr size="1"><br>
 <p>
 參考資訊：<br>
+https://docs.k3s.io/installation/uninstall<br>
 https://kubernetes.io/zh-cn/docs/tasks/run-application/run-stateless-application-deployment/<br><br>
 
-步驟如下：
+安裝K3s
 </p>
 <pre>
 $ cd
@@ -32,54 +33,11 @@ $ kubectl get pod
 </pre><br>
 
 <p>
-main.yaml
+移除K3s
 </p>
 <pre>
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: nginx-deployment
-spec:
-  selector:
-    matchLabels:
-      app: nginx
-  replicas: 1
-  template:
-    metadata:
-      labels:
-        app: nginx
-    spec:
-      containers:
-      - name: nginx
-        image: nginx:1.16.1
-        ports:
-        - containerPort: 80
-</pre><br>
-
-<p>
-Deployment
-</p>
-<pre>
-$ kubectl create -f main.yaml 
-    deployment.apps/nginx-deployment created
-
-$ kubectl get pod
-    NAME                                READY   STATUS    RESTARTS   AGE
-    nginx-deployment-848dd6cfb5-tjr95   1/1     Running   0          19s
-
-$ kubectl exec -it nginx-deployment-848dd6cfb5-tjr95 -- /bin/bash
-
-root@nginx-deployment-848dd6cfb5-tjr95:/#
-
-$ kubectl get deployment
-    NAME               READY   UP-TO-DATE   AVAILABLE   AGE
-    nginx-deployment   1/1     1            1           4s
-
-$ kubectl delete deployment nginx-deployment
-    deployment.apps "nginx-deployment" deleted
-
-$ kubectl get pod
-    No resources found in default namespace.
+$ /usr/local/bin/k3s-uninstall.sh
+$ #/usr/local/bin/k3s-agent-uninstall.sh
 </pre>
 
 <br><script type="text/javascript" src="../tail.js"></script>
