K3s How to hook createRuntime.

--- a/system.htm
+++ b/system.htm
@@ -549,6 +549,10 @@ K3s</h3>
 Enable Audit Event</a><br>
 
 &dash;
+<a href="system/k3s_hook.htm">
+Hook createRuntime</a><br>
+
+&dash;
 <a href="system/k3s_import_docker_image.htm">
 Import Docker Image</a><br>
 <br><br><br><br>
