--- a/index.htm
+++ b/index.htm
@@ -1316,6 +1316,10 @@ Build SDL2</a><br>
     閃屏測試</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/miyoo_a30_cpp_alarm.htm">
+    Alarm</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="handheld/miyoo_a30_cpp_joystick.htm">
     Joystick</a><br>
 <br><br><br><br>
