GNU Added a syslog example.

--- a/program.htm
+++ b/program.htm
@@ -74,6 +74,10 @@ GNU</h3>
     <a href="program/gnu/cpp_popen.htm">
     popen</a><br>
 
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/gnu_cpp_syslog.htm">
+    System Log</a><br>
+
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="program/gnu/cpp_json-c.htm">
     json-c</a><br>
