--- a/program.htm
+++ b/program.htm
@@ -75,6 +75,10 @@ GNU</h3>
     popen</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/gnu_cpp_daemon.htm">
+    Daemon</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="program/gnu_cpp_syslog.htm">
     System Log</a><br>
 
