Miyoo A30 Added opengles example.

--- a/index.htm
+++ b/index.htm
@@ -1322,6 +1322,13 @@ Build SDL2</a><br>
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="handheld/miyoo_a30_cpp_joystick.htm">
     Joystick</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&oplus;
+    <b>OpenGL ES 2.0</b><br>
+    
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="handheld/miyoo_a30_cpp_es_triangle.htm">
+        Triangle</a><br>
 <br><br><br><br>
 
 <div id="pocketgo"></div>
