Miyoo A30 Added opengles example.

--- a/index.htm
+++ b/index.htm
@@ -1328,7 +1328,11 @@ Build SDL2</a><br>
     
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
         <a href="handheld/miyoo_a30_cpp_es_triangle.htm">
-        Triangle</a><br>
+        Draw Triangle</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="handheld/miyoo_a30_cpp_es_texture.htm">
+        Draw Texture</a><br>
 <br><br><br><br>
 
 <div id="pocketgo"></div>
