--- a/handheld/miyoo_a30_cpp_es_texture.htm
+++ b/handheld/miyoo_a30_cpp_es_texture.htm
@@ -2,10 +2,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../index.htm">掌機</a> - Miyoo A30 - C/C++ - OpenGL ES 2.0 - <b>Draw Triangle</b></h3>
+<h3><a href="../index.htm">掌機</a> - Miyoo A30 - C/C++ - OpenGL ES 2.0 - <b>Draw Texture</b></h3>
 <hr size="1"><br>
 <p>
 參考資訊：<br>
+https://docs.gl/es2/glTexSubImage2D<br>
+https://learnopengl.com/Getting-started/Textures<br>
 https://www.khronos.org/assets/uploads/books/openglr_es_20_programming_guide_sample.pdf<br><br>
 
 main.c
@@ -24,18 +26,24 @@ main.c
 #define LCD_H   640
 
 const char *vShaderSrc =
-    "attribute vec4 vPosition;  \n"
-    "void main()                \n"
-    "{                          \n"
-    "  gl_Position = vPosition; \n"
-    "}                          \n";
-
+    "attribute vec4 a_position;   \n"
+    "attribute vec2 a_texCoord;   \n"
+    "varying vec2 v_texCoord;     \n"
+    "void main()                  \n"
+    "{                            \n"
+    "   gl_Position = a_position; \n"
+    "   v_texCoord = a_texCoord;  \n"
+    "}                            \n";
+  
 const char *fShaderSrc =
-    "precision mediump float;                       \n"
-    "void main()                                    \n"
-    "{                                              \n"
-    "   gl_FragColor = vec4(1.0, 1.0, 1.0, 1.0);    \n"
-    "}                                              \n"; 
+    "precision mediump float;                                  \n"
+    "varying vec2 v_texCoord;                                  \n"
+    "uniform sampler2D s_texture;                              \n"
+    "void main()                                               \n"
+    "{                                                         \n"
+    "    vec3 tex = texture2D(s_texture, v_texCoord).rgb;      \n"
+    "    gl_FragColor = vec4(tex, 1.0);                        \n"
+    "}                                                         \n";
 
 int main(int argc, char** argv)
 {
@@ -68,11 +76,20 @@ int main(int argc, char** argv)
     GLuint fShader = 0;
     GLuint pObject = 0;
     GLint compiled = 0;
+
+    int x = 0;
+    int y = 0;
+    uint32_t *p = NULL;
+    GLuint texID = 0;
+    GLubyte *buf = NULL;
+
     GLfloat vVertices[] = {
-         0.0f,  0.5f, 0.0f,
-        -0.5f, -0.5f, 0.0f,
-         0.5f, -0.5f, 0.0f
+       -1.0f,  1.0f, 0.0f,      0.0f,  0.0f,
+       -1.0f, -1.0f, 0.0f,      0.0f,  1.0f,
+        1.0f, -1.0f, 0.0f,      1.0f,  1.0f,
+        1.0f,  1.0f, 0.0f,      1.0f,  0.0f
     };
+    GLushort indices[] = {0, 1, 2, 0, 2, 3};
 
     egl = dlopen("libEGL.so", RTLD_LAZY | RTLD_LOCAL);
     display = eglGetDisplay(EGL_DEFAULT_DISPLAY);
@@ -86,6 +103,7 @@ int main(int argc, char** argv)
     glShaderSource(vShader, 1, &amp;vShaderSrc, NULL);
     glCompileShader(vShader);
     glGetShaderiv(vShader, GL_COMPILE_STATUS, &amp;compiled);
+
     fShader = glCreateShader(GL_FRAGMENT_SHADER);
     glShaderSource(fShader, 1, &amp;fShaderSrc, NULL);
     glCompileShader(fShader);
@@ -97,15 +115,45 @@ int main(int argc, char** argv)
     glLinkProgram(pObject);
     glUseProgram(pObject);
 
+    GLint posLoc = glGetAttribLocation(pObject, "a_position");
+    GLint texLoc = glGetAttribLocation(pObject, "a_texCoord");
+    GLint samLoc = glGetUniformLocation(pObject, "s_texture");
+
+    glGenTextures(1, &amp;texID);
     glViewport(0, 0, LCD_W, LCD_H);
     glClearColor(0.0f, 0.0f, 0.0f, 1.0f);
     glClear(GL_COLOR_BUFFER_BIT);
-    glVertexAttribPointer(0, 3, GL_FLOAT, GL_FALSE, 0, vVertices);
-    glEnableVertexAttribArray(0);
-    glDrawArrays(GL_TRIANGLES, 0, 3);
+
+    uint32_t col[] = {0xffff0000, 0xff00ff00, 0xff0000ff};
+
+    buf = malloc(LCD_W * LCD_H * 4);
+    p = (uint32_t *)buf;
+    for (y = 0; y &lt; LCD_H; y++) {
+        for (x = 0; x &lt; LCD_W; x++) {
+            *p++ = col[x / 160];
+        }
+    }
+    glBindTexture(GL_TEXTURE_2D, texID);
+    glPixelStorei(GL_UNPACK_ALIGNMENT, 1);
+    glTexParameteri(GL_TEXTURE_2D, GL_TEXTURE_MIN_FILTER, GL_NEAREST);
+    glTexParameteri(GL_TEXTURE_2D, GL_TEXTURE_MAG_FILTER, GL_NEAREST);
+    glTexImage2D(GL_TEXTURE_2D, 0, GL_RGBA, LCD_W, LCD_H, 0, GL_RGBA, GL_UNSIGNED_BYTE, buf);
+
+    glActiveTexture(GL_TEXTURE0);
+    glBindTexture(GL_TEXTURE_2D, texID);
+
+    glVertexAttribPointer(posLoc, 3, GL_FLOAT, GL_FALSE, 5 * sizeof(GLfloat), vVertices);
+    glVertexAttribPointer(texLoc, 2, GL_FLOAT, GL_FALSE, 5 * sizeof(GLfloat), &amp;vVertices[3]);
+    glEnableVertexAttribArray(posLoc);
+    glEnableVertexAttribArray(texLoc);
+    glUniform1i(samLoc, 0);
+    glDrawElements(GL_TRIANGLES, 6, GL_UNSIGNED_SHORT, indices);
+
     eglSwapBuffers(display, surface);
     sleep(3);
 
+    free(buf);
+    glDeleteTextures(1, &amp;texID);
     eglMakeCurrent(display, EGL_NO_SURFACE, EGL_NO_SURFACE, EGL_NO_CONTEXT);
     eglDestroyContext(display, context);
     eglDestroySurface(display, surface);
@@ -124,7 +172,7 @@ $ /opt/a30/bin/arm-linux-gcc main.c -o test -lGLESv2 -lEGL -ldl
 
 <p>
 完成<br>
-<img src="miyoo_a30_cpp_es_triangle/1.jpg" class="maxSize">
+<img src="miyoo_a30_cpp_es_texture/1.jpg" class="maxSize">
 </p>
 
 <br><script type="text/javascript" src="../tail.js"></script>
