--- a/index.htm
+++ b/index.htm
@@ -1327,6 +1327,10 @@ Build SDL2</a><br>
     <b>OpenGL ES 2.0</b><br>
     
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="handheld/miyoo_a30_cpp_es_version.htm">
+        Get Version</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
         <a href="handheld/miyoo_a30_cpp_es_triangle.htm">
         Draw Triangle</a><br>
 
