--- a/index.htm
+++ b/index.htm
@@ -1331,6 +1331,10 @@ Build SDL2</a><br>
         Get Version</a><br>
 
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="handheld/miyoo_a30_cpp_es_color.htm">
+        Fill Color</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
         <a href="handheld/miyoo_a30_cpp_es_triangle.htm">
         Draw Triangle</a><br>
 
