--- a/index.htm
+++ b/index.htm
@@ -1339,6 +1339,10 @@ Build SDL2</a><br>
         Draw Triangle</a><br>
 
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="handheld/miyoo_a30_cpp_es_shader.htm">
+        Use Shader</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
         <a href="handheld/miyoo_a30_cpp_es_texture.htm">
         Draw Texture</a><br>
 <br><br><br><br>
