Miyoo A30 Added opengles example.

--- a/index.htm
+++ b/index.htm
@@ -1345,6 +1345,10 @@ Build SDL2</a><br>
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
         <a href="handheld/miyoo_a30_cpp_es_texture.htm">
         Draw Texture</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="handheld/miyoo_a30_cpp_es_rotate.htm">
+        Rotate Position</a><br>
 <br><br><br><br>
 
 <div id="pocketgo"></div>
