--- a/index.htm
+++ b/index.htm
@@ -1349,6 +1349,10 @@ Build SDL2</a><br>
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
         <a href="handheld/miyoo_a30_cpp_es_rotate.htm">
         Rotate Position</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="handheld/miyoo_a30_cpp_es_scale.htm">
+        Scale Position</a><br>
 <br><br><br><br>
 
 <div id="pocketgo"></div>
