--- a/index.htm
+++ b/index.htm
@@ -1353,6 +1353,10 @@ Build SDL2</a><br>
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
         <a href="handheld/miyoo_a30_cpp_es_scale.htm">
         Scale Position</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="handheld/miyoo_a30_cpp_es_translate.htm">
+        Translate Position</a><br>
 <br><br><br><br>
 
 <div id="pocketgo"></div>
