--- a/index.htm
+++ b/index.htm
@@ -1357,6 +1357,10 @@ Build SDL2</a><br>
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
         <a href="handheld/miyoo_a30_cpp_es_translate.htm">
         Translate Position</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="handheld/miyoo_a30_cpp_es_multiple.htm">
+        Draw 2 Triangles</a><br>
 <br><br><br><br>
 
 <div id="pocketgo"></div>
