Miyoo A30 Added opengles example.

--- a/index.htm
+++ b/index.htm
@@ -1361,6 +1361,11 @@ Build SDL2</a><br>
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
         <a href="handheld/miyoo_a30_cpp_es_multiple.htm">
         Draw 2 Triangles</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="handheld/miyoo_a30_cpp_es_multiple2.htm">
+        Draw 2 Textures</a><br>
+
 <br><br><br><br>
 
 <div id="pocketgo"></div>
