--- a/index.htm
+++ b/index.htm
@@ -1348,7 +1348,11 @@ Build SDL2</a><br>
 
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
         <a href="handheld/miyoo_a30_cpp_es_rotate.htm">
-        Rotate Position</a><br>
+        Rotate Position (Shader)</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="handheld/miyoo_a30_cpp_es_rotate2.htm">
+        Rotate Position (Vertex)</a><br>
 
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
         <a href="handheld/miyoo_a30_cpp_es_scale.htm">
