--- a/index.htm
+++ b/index.htm
@@ -1320,6 +1320,10 @@ Build SDL2</a><br>
     Alarm</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/miyoo_a30_cpp_volume.htm">
+    Volume</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="handheld/miyoo_a30_cpp_joystick.htm">
     Joystick</a><br>
 
