Miyoo A30 Added opengles example.

--- a/index.htm
+++ b/index.htm
@@ -1374,6 +1374,9 @@ Build SDL2</a><br>
         <a href="handheld/miyoo_a30_cpp_es_multiple2.htm">
         Draw 2 Textures</a><br>
 
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="handheld/miyoo_a30_cpp_es_rgba.htm">
+        Convert ARGB to RGBA (Shader)</a><br>
 <br><br><br><br>
 
 <div id="pocketgo"></div>
