Miyoo A30 How to fix screen tearing issue in EGL.

--- a/index.htm
+++ b/index.htm
@@ -1265,6 +1265,10 @@ Boot Diagram</a><br>
 如何讓Buildroot編譯GLIBC 2.23</a><br>
 
 &dash;
+<a href="handheld/miyoo_a30_fix_vsync.htm">
+解決OpenGL ES: Screen tearing問題</a><br>
+
+&dash;
 <a href="handheld/miyoo_a30_fix_join.htm">
 解決join is not a member of fmt問題</a><br>
 
