--- a/driver.htm
+++ b/driver.htm
@@ -1465,6 +1465,10 @@ VxWorks</h3>
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
         <a href="driver/vxworks_23_09_dkm_muxbind.htm">
         MUX Binding</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="driver/vxworks_23_09_dkm_watchdog.htm">
+        Watchdog</a><br>
 </p>
 
 <br><script type="text/javascript" src="tail.js"></script>
