--- a/index.htm
+++ b/index.htm
@@ -1381,6 +1381,10 @@ Build SDL2</a><br>
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
         <a href="handheld/miyoo_a30_cpp_es_rgba.htm">
         Convert ARGB to RGBA (Shader)</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="handheld/miyoo_a30_cpp_es_alpha.htm">
+        Use Global Alpha Setting (Shader)</a><br>
 <br><br><br><br>
 
 <div id="pocketgo"></div>
