Miyoo A30 How to adjust volume.

--- a/index.htm
+++ b/index.htm
@@ -1253,6 +1253,10 @@ Memory Map</a><br>
 Boot Diagram</a><br>
 
 &dash;
+<a href="handheld/miyoo_a30_vol.htm">
+如何控制音量</a><br>
+
+&dash;
 <a href="handheld/miyoo_a30_led.htm">
 如何控制藍色LED</a><br>
 
