--- a/handheld/miyoo_a30_vol.htm
+++ b/handheld/miyoo_a30_vol.htm
@@ -8,6 +8,8 @@
 步驟如下：
 </p>
 <pre>
+$ amixer set 'DACL Mixer AIF1DA0L' on
+$ amixer set 'DACL Mixer AIF1DA0R' on
 $ amixer set 'Soft Volume Master' 200
 </pre><br>
 
