Pandora How to run level 3.

--- a/index.htm
+++ b/index.htm
@@ -382,6 +382,10 @@ UART改造</a><br>
     解決/dev/dsp只有單聲道輸出問題</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_rebirth_mark3_runlevel.htm">
+    如何跑Run Level 3</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="handheld/pandora_rebirth_mark3_serial.htm">
     如何啟動/dev/ttyO2</a><br>
 
