--- a/driver.htm
+++ b/driver.htm
@@ -1469,6 +1469,10 @@ VxWorks</h3>
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
         <a href="driver/vxworks_23_09_dkm_watchdog.htm">
         Watchdog</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="driver/vxworks_23_09_dkm_pipe.htm">
+        Pipe</a><br>
 </p>
 
 <br><script type="text/javascript" src="tail.js"></script>
