VxWorks How to use message queue.

--- a/system.htm
+++ b/system.htm
@@ -607,6 +607,13 @@ VxWorks</h3>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="system/vxworks_23_09_build_dkm.htm">
     Build Example(DKM)</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&oplus;
+    <b>C/C++</b><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="system/vxworks_23_09_cpp_msg.htm">
+        Message Queue</a><br>
 <br><br><br><br>
 
 <div id="autosd"></div>
