GNU How to use mmap with exec flag.

--- a/program.htm
+++ b/program.htm
@@ -83,6 +83,10 @@ GNU</h3>
     Daemon</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/gnu_cpp_mmap_exec.htm">
+    MMAP(EXEC)</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="program/gnu_cpp_syslog.htm">
     System Log</a><br>
 
