--- a/driver.htm
+++ b/driver.htm
@@ -1472,7 +1472,11 @@ VxWorks</h3>
 
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
         <a href="driver/vxworks_23_09_dkm_pipe.htm">
-        Pipe</a><br>
+        Create Pipe</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="driver/vxworks_23_09_dkm_taskhook.htm">
+        Task Hook</a><br>
 </p>
 
 <br><script type="text/javascript" src="tail.js"></script>
