--- a/driver.htm
+++ b/driver.htm
@@ -1477,6 +1477,10 @@ VxWorks</h3>
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
         <a href="driver/vxworks_23_09_dkm_taskhook.htm">
         Task Hook</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="driver/vxworks_23_09_dkm_rtphook.htm">
+        RTP Hook</a><br>
 </p>
 
 <br><script type="text/javascript" src="tail.js"></script>
