--- a/driver.htm
+++ b/driver.htm
@@ -1481,6 +1481,10 @@ VxWorks</h3>
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
         <a href="driver/vxworks_23_09_dkm_rtphook.htm">
         RTP Hook</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="driver/vxworks_23_09_dkm_modulehook.htm">
+        Module Hook</a><br>
 </p>
 
 <br><script type="text/javascript" src="tail.js"></script>
