Miyoo A30 How to get battery voltage.

--- a/index.htm
+++ b/index.htm
@@ -1265,6 +1265,10 @@ Boot Diagram</a><br>
 如何控制藍色LED</a><br>
 
 &dash;
+<a href="handheld/miyoo_a30_battery.htm">
+如何取得電池電壓</a><br>
+
+&dash;
 <a href="handheld/miyoo_a30_backlight.htm">
 如何控制屏幕背光</a><br>
 
