VxWorks How to do syscall hooking.

--- a/driver.htm
+++ b/driver.htm
@@ -1488,7 +1488,11 @@ VxWorks</h3>
 
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
         <a href="driver/vxworks_23_09_dkm_syscallhook.htm">
-        Syscall Hook</a><br>
+        Syscall Hook (Group)</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="driver/vxworks_23_09_dkm_syscallhook2.htm">
+        Syscall Hook (Entry and Exit)</a><br>
 </p>
 
 <br><script type="text/javascript" src="tail.js"></script>
