--- a/driver/vxworks_23_09_dkm_syscallhook.htm
+++ b/driver/vxworks_23_09_dkm_syscallhook.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../driver.htm">驅動程式</a> - VxWorks - 23.09 - C/C++ - <b>Syscall Hook</b></h3>
+<h3><a href="../driver.htm">驅動程式</a> - VxWorks - 23.09 - C/C++ - <b>Syscall Hook (Group)</b></h3>
 <hr size="1"><br>
 <p>
 參考資訊：<br>
