Miyoo Mini Reverse batterytest.

--- a/index.htm
+++ b/index.htm
@@ -1862,6 +1862,10 @@ SDL Key</a><br>
 焊接UART腳位</a><br>
 
 &dash;
+<a href="handheld/miyoo_mini_batterytest.htm">
+逆向BatteryTest</a><br>
+
+&dash;
 <a href="handheld/miyoo_mini_uart_jack.htm">
 焊接UART腳位(耳機孔)</a><br>
 
