Miyoo Mini How to read battery value from /dev/sar.

--- a/index.htm
+++ b/index.htm
@@ -2008,6 +2008,10 @@ SDL Key</a><br>
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="handheld/miyoo_mini_cpp_input_event.htm">
     Input_Event</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/miyoo_mini_cpp_read_battery.htm">
+    Read Battery</a><br>
 <br><br><br><br>
 
 <div id="miyoominiplus"></div>
