Miyoo A30 How to flush dcache and icache.

--- a/index.htm
+++ b/index.htm
@@ -1257,6 +1257,10 @@ Memory Map</a><br>
 Boot Diagram</a><br>
 
 &dash;
+<a href="handheld/miyoo_a30_cache.htm">
+Flush dcache、icache</a><br>
+
+&dash;
 <a href="handheld/miyoo_a30_vol.htm">
 如何控制音量</a><br>
 
@@ -1870,6 +1874,10 @@ SDL Key</a><br>
 焊接UART腳位(耳機孔)</a><br>
 
 &dash;
+<a href="handheld/miyoo_a30_cache.htm">
+Flush dcache、icache</a><br>
+
+&dash;
 <a href="handheld/miyoo_mini_uart_pl2303.htm">
 焊接UART腳位(PL-2303SA)</a><br>
 
@@ -2052,12 +2060,16 @@ GPIO Address</a><br>
 Extract U-Boot</a><br>
 
 &dash;
+<a href="handheld/miyoo_mini_plus_repack_uimage_xz.htm">
+Repack uImage.xz</a><br>
+
+&dash;
 <a href="handheld/miyoo_mini_plus_extract_dts.htm">
 Extract Device Tree</a><br>
 
 &dash;
-<a href="handheld/miyoo_mini_plus_repack_uimage_xz.htm">
-Repack uImage.xz</a><br>
+<a href="handheld/miyoo_a30_cache.htm">
+Flush dcache、icache</a><br>
 
 &dash;
 <a href="handheld/miyoo_mini_plus_uart.htm">
