Miyoo A30 How to enable vibrator.

--- a/handheld/miyoo_a30_motor.htm
+++ b/handheld/miyoo_a30_motor.htm
@@ -2,13 +2,16 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../index.htm">掌機</a> - Miyoo A30 - <b>如何控制藍色LED</b></h3>
+<h3><a href="../index.htm">掌機</a> - Miyoo A30 - <b>如何控制振動馬達</b></h3>
 <hr size="1"><br>
 <p>
 步驟如下：
 </p>
 <pre>
-$ echo 100 &gt; /sys/devices/virtual/disp/disp/attr/lcdbl
+$ echo 100 &gt; /sys/devices/virtual/timed_output/vibrator/enable
 </pre>
+<p>
+P.S. 單位為ms
+</p>
 
 <br><script type="text/javascript" src="../tail.js"></script>
