--- a/index.htm
+++ b/index.htm
@@ -1277,6 +1277,10 @@ Flush dcache、icache</a><br>
 如何控制屏幕背光</a><br>
 
 &dash;
+<a href="handheld/miyoo_a30_motor.htm">
+如何控制振動馬達</a><br>
+
+&dash;
 <a href="handheld/miyoo_a30_buildroot_glibc_2.23.htm">
 如何讓Buildroot編譯GLIBC 2.23</a><br>
 
