--- a/driver/vxworks_23_09_dkm_syscallhook2.htm
+++ b/driver/vxworks_23_09_dkm_syscallhook2.htm
@@ -55,9 +55,10 @@ int add_hook(void)
     syscallExitHookAdd(exit_hook, FALSE); 
     return OK;
 }
-</pre><br>
-
+</pre>
 <p>
+P.S. 不能在syscallEntryHook()裏面呼叫任何libc的函數<br><br>
+
 app.c
 </p>
 <pre class="brush:cpp">
